# asana-timer

./: .gitignore  main.py  pyproject.toml  routine_loader.py  speaker.py  utils.py
routines/: crow_pose_focused_routine.json  gentle_flow_routine.json  harder_mobility_routine.json  head_stand_preparation_routine.json  mobility_routine.json  morning_sun_salutation.json  restorative_routine.json  simple_ashtaga_routine.json  sun_salutation_A.json  sun_salutation_B.json
